--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>404 Error - Page not found!</title>
-  <link rel="stylesheet" href=".404.css">
+  <link rel="stylesheet" href="./404.css">
 
 </head>
 <body>
